# learnMSA

./: .gitignore  =1.69  AncProbsImproved.ipynb  DOCS_DEPLOYMENT.md  MANIFEST.in  MsaHmm.ipynb  MsaHmm.py  README.md  _env  config.json  egf.out  learnMSA.py  learnMSA_demo.ipynb  learnMSA_doc.md  learnMSA_tree_demo.ipynb  learnMSA_tree_star_test.ipynb  learnMSA_tree_ungapped_demo.ipynb  learnMSA_with_language_model_demo.ipynb  pyproject.toml  pytest.ini  requirements.txt  requirements_cpu.txt  setup.py  single_del_default.ipynb  single_del_propagate_root.ipynb  single_del_tree_loss.ipynb  star_default.ipynb  star_independent_clusters.ipynb  star_propagate_root.ipynb  star_tree_loss.ipynb  test.out  test_famsa.ipynb  tree_loss.ipynb  ungapped_default.ipynb  ungapped_independent_clusters.ipynb  ungapped_propagate_root.ipynb  ungapped_tree_loss.ipynb
docs/: api.rst  conf.py  index.rst  init_msa.rst  io.rst  language_model.rst  training.rst  visualization.rst
examples/: learnMSA_demo.ipynb  learnMSA_in_memory.ipynb  learnMSA_with_language_model_demo.ipynb
learnMSA/: __init__.py  phmm_config.py  transitioner_config.py  util.py
msa_hmm/: Align.py  AncProbsLayer.py  Configuration.py  DirichletMixture.py  MsaHmmCell.py  MsaHmmLayer.py  Run.py  Training.py  Utility.py  Visualize.py  __init__.py
test/: ForwardBenchmark.ipynb  RefModels.py  TestMea.py  TestModels.ipynb  TestSupervisedTraining.py  TheoreticalMvnEmittions.ipynb  UnitTests.py  indices  keras_metadata.pb  meta.json  model  saved_model.pb
test_results/: baseline_equilibrium_sample_results.balifam10000.txt  baseline_results.homfam.txt  (+28 more)
(+2747 files in other folders)
